# wx-files-service

./: NEWS.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  wx-files-service.env
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh  post-start.sh
.github/workflows/: docker-publish.yml  image-scan.yml  pypi-publish.yml  python-ci.yml
docker/: Dockerfile  docker-compose.yaml  wx-files-frontend.env  wx-files-service.env
docs/: api.md  configuration.md  database.md  development.md  installation.md  production.md  testing.md
scripts/: index_location  index_location_collection
tests/indexer/: conftest.py  test_file_parsing.py  test_fixtures.py  test_indexer.py
wxfs/: __init__.py  asgi.py  wsgi.py
wxfs/api/: files.py  locations.py
wxfs/database/: __init__.py
wxfs/database/demo/: database.py  docker-compose.yaml
wxfs/database/demo/setup01/: 01_roles.sql  02_setup.sql  03_search_path.sql  README.md
wxfs/fake_data/: __init__.py
wxfs/indexer/: __init__.py  db_helpers.py  file_parsing.py
wxfs/openapi/: api-spec.yaml
