[tool.poetry]
name = "wxfs"
version = "1.0.0"
description = "PCIC microservice for Wx Files (weather files)"
authors = ["Rod Glover <rglover@uvic.ca>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.9.0.post0"
psycopg2 = "^2.9.9"
Flask = "^3.0.3"
Flask-Cors = "^5.0.0"
Flask-SQLAlchemy = "^3.1.1"
connexion = {extras = ["swagger-ui", "flask", "uvicon"], version = "^3.1.0"}
alembic = "^1.13.3"
uvicorn = "^0.31.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
"testing.postgresql" = "^1.3.0"
alembic = "^1.13.3"
alembic-verify = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
