[tool.poetry]
name = "wxfs"
version = "1.1.0"
description = "PCIC microservice for Wx Files (weather files)"
authors = ["Rod Glover <rglover@uvic.ca>"]
license = "GNU General Public License v3 (GPLv3)"
readme = "README.md"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/wx-files-service"
keywords = ["sql", "database", "pcds", "crmp", "climate", "meteorology"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.9.0.post0"
psycopg2 = "^2.9.9"
Flask = "^3.0.3"
Flask-Cors = "^5.0.0"
Flask-SQLAlchemy = "^3.1.1"
connexion = {extras = ["flask", "uvicorn"], version = "^3.1.0"}
alembic = "^1.13.3"
uvicorn = "^0.31.1"
asgiref = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
"testing.postgresql" = "^1.3.0"
alembic = "^1.13.3"
alembic-verify = "^0.1.4"

[tool.poetry.scripts]
index_location = "scripts.index_location:main"
index_location_collection = "scripts.index_location_collection:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
